--- a/k8s/addons/ingress.yml
+++ b/k8s/addons/ingress.yml
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: Copyright 2024 Rifa Achrinza
+# SPDX-License-Identifier: Apache-2.0
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
