--- a/k8s/addons/local_testing.yml
+++ b/k8s/addons/local_testing.yml
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: Copyright 2024 Rifa Achrinza
+# SPDX-License-Identifier: Apache-2.0
 #@data/values
 #@ load("@ytt:overlay", "overlay")
 ---
